# ipiano

./: .travis.yml  CMakeLists.txt  README.md  classFunctionals.html  classFunctionals_1_1Denoising.html  classFunctionals_1_1Denoising_1_1Noise-members.html  classFunctionals_1_1PhaseField-members.html  classFunctionals_1_1PhaseField.html  classFunctionals_1_1PhaseField__Color-members.html  classFunctionals_1_1Util-members.html  classiPiano-members.html  classiPiano.html  classnmiPiano.html  config.doxygen  dir_1504ad8974729dfe4ac50cba91fa1f95.html  dir_2380c87c5cbb1e32dc80a904ce2b6da9.html  dir_6787b806d4eaf3d9ecb312de24841251.html  dir_80aa951d7da7c58e90bdc269612b78f1.html  dir_9a51152690cdaeaaabd5cdd409a973c2.html  dir_c088727d863af81c17b48e12c9b7227e.html  dir_d12949b356e8f3d575e04a0a604c7138.html  files.html  functionals_8h_source.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  nmipiano_8h_source.html  structiPiano_1_1Options-members.html  structiPiano_1_1Options.html  structnmiPiano_1_1Iteration-members.html  structnmiPiano_1_1Options.html
cmake/: FindGlog.cmake
compressive_sensing_cli/: CMakeLists.txt  main.cpp
doc/: annotated.html  classFunctionals_1_1CompressiveSensing-members.html  classFunctionals_1_1CompressiveSensing.html  classFunctionals_1_1Denoising-members.html  classFunctionals_1_1Denoising_1_1Evaluation-members.html  classFunctionals_1_1Denoising_1_1Evaluation.html  classFunctionals_1_1Denoising_1_1Noise.html  classFunctionals_1_1PhaseField__Color.html  classes.html  (+12 more)
image_denoising_cli/: CMakeLists.txt  main.cpp
(+58 files in other folders)
